[package]
name = "cms"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.4"
actix-cors = "0.6"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sanitize-filename = "0.5"
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros", "migrate"] }
futures-util = "0.3"

